--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
@@ -24,7 +26,6 @@
   },
   "dependencies": {
     "express": "^4.18.1",
-    "mongodb": "^6.1.0",
     "mongoose": "^6.5.0"
   }
 }
