--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Александр Моругин",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
@@ -25,6 +26,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
   }
